cmake_minimum_required(VERSION 3.23)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Problems)


add_executable(Problems_10000_15650 Problems/10000/15650.cpp Problems/10000/15651.cpp Problems/10000/15652.cpp Problems/00000/01764.cpp Problems/00000/05086.cpp Problems/00000/01037.cpp Problems/10000/11050.cpp Problems/10000/11051.cpp)
add_executable(Problems_10000_15651 Problems/10000/15651.cpp)
add_executable(Problems_10000_15652 Problems/10000/15652.cpp)
add_executable(Problems_00000_05086 Problems/00000/05086.cpp)
add_executable(Problems_00000_01037 Problems/00000/01037.cpp)
add_executable(Problems_10000_11050 Problems/10000/11050.cpp)
add_executable(Problems_20000_24416 Problems/20000/24416.cpp)
add_executable(Problems_10000_11651 Problems/10000/11651.cpp)
add_executable(Problems_10000_10814 Problems/10000/10814.cpp)
add_executable(Problems_00000_02108 Problems/00000/02108.cpp)
add_executable(Problems_00000_02751 Problems/00000/02751.cpp)
add_executable(Problems_10000_11399 Problems/10000/11399.cpp)
add_executable(Problems_10000_11047 Problems/10000/11047.cpp)
add_executable(Problems_00000_07568 Problems/00000/07568.cpp)
add_executable(Problems_00000_01436 Problems/00000/01436.cpp)
add_executable(Problems_00000_09184 Problems/00000/09184.cpp)
add_executable(Problems_10000_10773 Problems/10000/10773.cpp)
add_executable(Problems_10000_11866 Problems/10000/11866.cpp)
add_executable(Problems_00000_01978 Problems/00000/01978.cpp)
add_executable(Problems_00000_02581 Problems/00000/02581.cpp)
add_executable(Problems_00000_01929 Problems/00000/01929.cpp)
add_executable(Problems_00000_04948 Problems/00000/04948.cpp)
add_executable(Problems_00000_02941 Problems/00000/02941.cpp)
add_executable(Problems_00000_01316 Problems/00000/01316.cpp)
add_executable(Problems_10000_18870 Problems/10000/18870.cpp)
add_executable(Problems_10000_10815 Problems/10000/10815.cpp)
add_executable(Problems_10000_14425 Problems/10000/14425.cpp)
add_executable(Problems_00000_01764 Problems/00000/01764.cpp)
add_executable(Problems_00000_01620 Problems/00000/01620.cpp)
add_executable(Problems_00000_01269 Problems/00000/01269.cpp)
add_executable(Problems_10000_10816 Problems/10000/10816.cpp)
add_executable(Problems_10000_11478 Problems/10000/11478.cpp)
add_executable(Problems_00000_01085 Problems/00000/01085.cpp)
add_executable(Problems_00000_03009 Problems/00000/03009.cpp)
add_executable(Problems_00000_04153 Problems/00000/04153.cpp)
add_executable(Problems_00000_03053 Problems/00000/03053.cpp)
add_executable(Problems_00000_01002 Problems/00000/01002.cpp)
add_executable(Problems_00000_09375 Problems/00000/09375.cpp)
add_executable(Problems_00000_03036 Problems/00000/03036.cpp)
add_executable(Problems_00000_01010 Problems/00000/01010.cpp)
add_executable(Problems_00000_02609 Problems/00000/02609.cpp)
add_executable(Problems_00000_01934 Problems/00000/01934.cpp)
add_executable(Problems_00000_01676 Problems/00000/01676.cpp)
add_executable(Problems_00000_02004 Problems/00000/02004.cpp)
add_executable(Problems_00000_02738 Problems/00000/02738.cpp)
add_executable(Problems_00000_01181 Problems/00000/01181.cpp)
add_executable(Problems_10000_11653 Problems/10000/11653.cpp)
add_executable(Problems_00000_09020 Problems/00000/09020.cpp)
add_executable(Problems_00000_02775 Problems/00000/02775.cpp)
add_executable(Problems_00000_02839 Problems/00000/02839.cpp)
add_executable(Problems_00000_01912 Problems/00000/01912.cpp)
add_executable(Problems_10000_11053 Problems/10000/11053.cpp)
add_executable(Problems_10000_10828 Problems/10000/10828.cpp)