cmake_minimum_required(VERSION 3.23)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Problems)


add_executable(Problems_10000_15650 Problems/10000/15650.cpp Problems/10000/15651.cpp Problems/10000/15652.cpp Problems/00000/01764.cpp Problems/00000/05086.cpp Problems/00000/01037.cpp Problems/10000/11050.cpp Problems/10000/11051.cpp)
add_executable(Problems_10000_15651 Problems/10000/15651.cpp)
add_executable(Problems_10000_15652 Problems/10000/15652.cpp)
add_executable(Problems_00000_05086 Problems/00000/05086.cpp)
add_executable(Problems_00000_01037 Problems/00000/01037.cpp)
add_executable(Problems_10000_11050 Problems/10000/11050.cpp)
add_executable(Problems_20000_24416 Problems/20000/24416.cpp)
add_executable(Problems_10000_11651 Problems/10000/11651.cpp)
add_executable(Problems_10000_10814 Problems/10000/10814.cpp)
add_executable(Problems_00000_02108 Problems/00000/02108.cpp)
add_executable(Problems_00000_02751 Problems/00000/02751.cpp)
add_executable(Problems_10000_11399 Problems/10000/11399.cpp)
add_executable(Problems_10000_11047 Problems/10000/11047.cpp)
add_executable(Problems_00000_07568 Problems/00000/07568.cpp)
add_executable(Problems_00000_01436 Problems/00000/01436.cpp)
add_executable(Problems_00000_09184 Problems/00000/09184.cpp)
add_executable(Problems_10000_10773 Problems/10000/10773.cpp)
add_executable(Problems_10000_11866 Problems/10000/11866.cpp)
add_executable(Problems_00000_01978 Problems/00000/01978.cpp)
add_executable(Problems_00000_02581 Problems/00000/02581.cpp)
add_executable(Problems_00000_01929 Problems/00000/01929.cpp)
add_executable(Problems_00000_04948 Problems/00000/04948.cpp)
add_executable(Problems_00000_02941 Problems/00000/02941.cpp)
add_executable(Problems_00000_01316 Problems/00000/01316.cpp)
add_executable(Problems_10000_18870 Problems/10000/18870.cpp)
add_executable(Problems_10000_10815 Problems/10000/10815.cpp)
add_executable(Problems_10000_14425 Problems/10000/14425.cpp)
add_executable(Problems_00000_01764 Problems/00000/01764.cpp)
add_executable(Problems_00000_01620 Problems/00000/01620.cpp)
add_executable(Problems_00000_01269 Problems/00000/01269.cpp)
add_executable(Problems_10000_10816 Problems/10000/10816.cpp)
add_executable(Problems_10000_11478 Problems/10000/11478.cpp)
add_executable(Problems_00000_01085 Problems/00000/01085.cpp)
add_executable(Problems_00000_03009 Problems/00000/03009.cpp)
add_executable(Problems_00000_04153 Problems/00000/04153.cpp)
add_executable(Problems_00000_03053 Problems/00000/03053.cpp)
add_executable(Problems_00000_01002 Problems/00000/01002.cpp)
add_executable(Problems_00000_09375 Problems/00000/09375.cpp)
add_executable(Problems_00000_03036 Problems/00000/03036.cpp)
add_executable(Problems_00000_01010 Problems/00000/01010.cpp)
add_executable(Problems_00000_02609 Problems/00000/02609.cpp)
add_executable(Problems_00000_01934 Problems/00000/01934.cpp)
add_executable(Problems_00000_01676 Problems/00000/01676.cpp)
add_executable(Problems_00000_02004 Problems/00000/02004.cpp)
add_executable(Problems_00000_02738 Problems/00000/02738.cpp)
add_executable(Problems_00000_01181 Problems/00000/01181.cpp)
add_executable(Problems_10000_11653 Problems/10000/11653.cpp)
add_executable(Problems_00000_09020 Problems/00000/09020.cpp)
add_executable(Problems_00000_02775 Problems/00000/02775.cpp)
add_executable(Problems_00000_02839 Problems/00000/02839.cpp)
add_executable(Problems_00000_01912 Problems/00000/01912.cpp)
add_executable(Problems_10000_11053 Problems/10000/11053.cpp)
add_executable(Problems_10000_10828 Problems/10000/10828.cpp)
add_executable(Problems_00000_01018 Problems/00000/01018.cpp)
add_executable(Problems_00000_04673 Problems/00000/04673.cpp)
add_executable(Problems_00000_01065 Problems/00000/01065.cpp)
add_executable(Problems_00000_06588 Problems/00000/06588.cpp)
add_executable(Problems_10000_17103 Problems/10000/17103.cpp)
add_executable(Problems_00000_02588 Problems/00000/02588.cpp)
add_executable(Problems_10000_17087 Problems/10000/17087.cpp)
add_executable(Problems_00000_01747 Problems/00000/01747.cpp)
add_executable(Problems_00000_02559 Problems/00000/02559.cpp)
add_executable(Problems_10000_16139 Problems/10000/16139.cpp)
add_executable(Problems_10000_14888 Problems/10000/14888.cpp)
add_executable(Problems_00000_04949 Problems/00000/04949.cpp)
add_executable(Problems_00000_02606 Problems/00000/02606.cpp)
add_executable(Problems_00000_01012 Problems/00000/01012.cpp)
add_executable(Problems_10000_11724 Problems/10000/11724.cpp)
add_executable(Problems_10000_10026 Problems/10000/10026.cpp)
add_executable(Problems_00000_01743 Problems/00000/01743.cpp)
add_executable(Problems_10000_13023 Problems/10000/13023.cpp)
add_executable(Problems_00000_02163 Problems/00000/02163.cpp)
add_executable(Problems_10000_10699 Problems/10000/10699.cpp)
add_executable(Problems_00000_02525 Problems/00000/02525.cpp)
add_executable(Problems_00000_02530 Problems/00000/02530.cpp)
add_executable(Problems_00000_05355 Problems/00000/05355.cpp)
add_executable(Problems_00000_02798 Problems/00000/02798.cpp)
add_executable(Problems_00000_01789 Problems/00000/01789.cpp)
add_executable(Problems_20000_25501 Problems/20000/25501.cpp)
add_executable(Problems_10000_10039 Problems/10000/10039.cpp)
add_executable(Problems_00000_02476 Problems/00000/02476.cpp)
add_executable(Problems_00000_02884 Problems/00000/02884.cpp)
add_executable(Problems_00000_05063 Problems/00000/05063.cpp)
add_executable(Problems_10000_10102 Problems/10000/10102.cpp)
add_executable(Problems_00000_08958 Problems/00000/08958.cpp)
add_executable(Problems_00000_09506 Problems/00000/09506.cpp)
add_executable(Problems_10000_10162 Problems/10000/10162.cpp)
add_executable(Problems_10000_10103 Problems/10000/10103.cpp)
add_executable(Problems_10000_10757 Problems/10000/10757.cpp)
add_executable(Problems_00000_02178 Problems/00000/02178.cpp)
add_executable(Problems_00000_04963 Problems/00000/04963.cpp)
add_executable(Problems_00000_02667 Problems/00000/02667.cpp)
add_executable(Problems_10000_18258 Problems/10000/18258.cpp)
add_executable(Problems_10000_11441 Problems/10000/11441.cpp)
add_executable(Problems_10000_13900 Problems/10000/13900.cpp)
add_executable(Problems_00000_01325 Problems/00000/01325.cpp)
add_executable(Problems_00000_02468 Problems/00000/02468.cpp)
add_executable(Problems_00000_02583 Problems/00000/02583.cpp)
add_executable(Problems_20000_24444 Problems/20000/24444.cpp)
add_executable(Problems_10000_14501 Problems/10000/14501.cpp)
add_executable(Problems_00000_09012 Problems/00000/09012.cpp)
add_executable(Problems_20000_26517 Problems/20000/26517.cpp)
add_executable(Problems_00000_09711 Problems/00000/09711.cpp)
add_executable(Problems_10000_15688 Problems/10000/15688.cpp)
add_executable(Problems_00000_02580 Problems/00000/02580.cpp)
add_executable(Problems_00000_05635 Problems/00000/05635.cpp)
add_executable(Problems_10000_14889 Problems/10000/14889.cpp)
add_executable(Problems_00000_09461 Problems/00000/09461.cpp)
add_executable(Problems_00000_01735 Problems/00000/01735.cpp)
add_executable(Problems_00000_06603 Problems/00000/06603.cpp)
add_executable(Problems_00000_01182 Problems/00000/01182.cpp)
add_executable(Problems_10000_15654 Problems/10000/15654.cpp)
add_executable(Problems_10000_15655 Problems/10000/15655.cpp)
add_executable(Problems_10000_15656 Problems/10000/15656.cpp)
add_executable(Problems_10000_15657 Problems/10000/15657.cpp)
add_executable(Problems_10000_14225 Problems/10000/14225.cpp)
add_executable(Problems_10000_10819 Problems/10000/10819.cpp)
add_executable(Problems_00000_01977 Problems/00000/01977.cpp)
add_executable(Problems_00000_01408 Problems/00000/01408.cpp)
add_executable(Problems_00000_01904 Problems/00000/01904.cpp)
add_executable(Problems_00000_02748 Problems/00000/02748.cpp)
add_executable(Problems_10000_10984 Problems/10000/10984.cpp)
add_executable(Problems_00000_02442 Problems/00000/02442.cpp)
add_executable(Problems_00000_02443 Problems/00000/02443.cpp)
add_executable(Problems_00000_02522 Problems/00000/02522.cpp)
add_executable(Problems_00000_02445 Problems/00000/02445.cpp)
add_executable(Problems_00000_02446 Problems/00000/02446.cpp)
add_executable(Problems_10000_10986 Problems/10000/10986.cpp)
add_executable(Problems_10000_10164 Problems/10000/10164.cpp)
add_executable(Problems_00000_01759 Problems/00000/01759.cpp)
add_executable(Problems_00000_03980 Problems/00000/03980.cpp)
add_executable(Problems_00000_01987 Problems/00000/01987.cpp)
add_executable(Problems_00000_06443 Problems/00000/06443.cpp)
add_executable(Problems_00000_02506 Problems/00000/02506.cpp)
add_executable(Problems_10000_16395 Problems/10000/16395.cpp)
add_executable(Problems_10000_14651 Problems/10000/14651.cpp)
add_executable(Problems_10000_17413 Problems/10000/17413.cpp)
add_executable(Problems_10000_16938 Problems/10000/16938.cpp)
add_executable(Problems_10000_10974 Problems/10000/10974.cpp)
add_executable(Problems_00000_02592 Problems/00000/02592.cpp)
add_executable(Problems_00000_01292 Problems/00000/01292.cpp)
add_executable(Problems_00000_03460 Problems/00000/03460.cpp)
add_executable(Problems_10000_15720 Problems/10000/15720.cpp)
add_executable(Problems_00000_04344 Problems/00000/04344.cpp)
add_executable(Problems_00000_01110 Problems/00000/01110.cpp)
add_executable(Problems_00000_05549 Problems/00000/05549.cpp)
add_executable(Problems_20000_27210 Problems/20000/27210.cpp)